--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ body {
   }
   .footer-links a {
     text-decoration: none;
+    color: hsl(167, 40%, 24%);
   }
   .footer-link:hover {
     cursor: pointer;
